# WEFEDemand

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  captain-definition  docker-compose.yml  environment.yml  pyproject.toml
data_analysis/: dat_main_app.py  data_analysis_test.py  data_analysis_ui.py  display_relational_df.py  relational_df.py
data_analysis/pages/: data_analysis.py  model_demand_profiles.py  survey_response_data.py
demo/: README.md  agg_demand.csv  agg_demand_Aiwa.csv  agg_demand_Arusi.csv  app.py  dat_ramp_model_demo.py  preprocessing_demo.py  ramp_simulation_demo.py  test_windows.py
docs/: conf.py
fastapi_app/: webapp.py  worker.py
fastapi_app/templates/: index.html
helpers/: extend_vs_preallocation_benchmark.py  plotting.py
input/: admin_input.py  complete_input_Aiwa.py  complete_input_Arusi.py  cooking_demand.py  household_elec_demand.py  service_water_demand.py
nginx/: server.conf
preprocessing/: README.md  constants.py  conversion_functions.py  create_dictionary.py  defaults.py  first_survey.json  formparser.py  kobo_api_access.py  library.py  process_survey.py  surveyparser.py  utils.py
preprocessing/test/: agroprocessing_1.json  business_1.json  household_1.json  service_1.json  test.json
ramp_model/: ramp_control.py
requirements/: default.txt  deploy.txt  dev.txt
src/wefe_demand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
survey/: Test Survey_WEF_rev21.xlsx
task_queue/: Dockerfile  celery_tasks.py  celery_worker.py  tasks.py
tests/: test_something.py
(+22 files in other folders)
